2107
It happens again with r19108
```scala
class Test {
  def test[A](list: List[A]) = list match {
    case Seq(x, y) => "xy"
    case Seq(x) => "x"
    case _ => "something else"
  }
}
```
gives
```scala
Test.scala:4: error: unreachable code
    case Seq(x) => "x"
                   ^
one error found
```
but
```scala
class Test {
  def test[A](list: List[A]) = list match {
    case Seq(x) => "x"
    case Seq(x, y) => "xy"
    case _ => "something else"
  }
}
```
compiles without complaints.
